ミドルウェア内で実際にログインしているかをチェックするように修正
